--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <button data-ng-click="root.goTo('/calculator')">Calculator</button>
             <button data-ng-click="root.goTo('/trigonometric_calculator')">Trigonometric Calculator</button>
             <button data-ng-click="root.goTo('/scientific_calculator')">Scientific Calculator</button>
+            <button data-ng-click="root.goTo('/people')">People table</button>
         </div>
     </body>
 </html>
